--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div style="background-color:white;text-align:center;"> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfMiQjmnVPY5PVYEUcTwXJsxtga6Bol95KvZn1XW3XKmesTow/viewform?usp=sf_link" target_="blank">Enter here to fill Details. </a></div>
     <div class="container">
         <div class="app-title">
             <p>Weather</p>
